# s2client-api

./: .gitignore  .gitmodules  CMakeLists.txt  CopyMapAndReplay.PS1  README.md  thought_and_ideas.md  time.txt  workplace.code-workspace
contrib/libssh_x64-windows/: CONTROL
examples/: CMakeLists.txt  feature_layers.cc  proxy.cc  rendered.cc  test.txt  tutorial.cc
examples/my_bots/: bot_tutor.cc  bot_tutor.h  command.h  one_frame_bot.cpp  one_frame_bot.h  random_bot - Copy.cpp  random_bot - Copy.h  random_bot.cpp  random_bot.h  solution.cpp  solution.h  utilities.h
examples/my_bots/Algorithm/: GA.h  NSGAII.h  algorithm.h  real_GA.h  simple_GA.cpp
examples/my_bots/Problem/: problem.h
examples/my_bots/RollingBot/: rolling_GA.cpp  rolling_GA.h  rolling_bot.cpp  rolling_bot.h  simulator.cpp  simulator.h  state.cpp  state.h
examples/my_bots/potential_field/: advanced_potential_field_bot.cpp  advanced_potential_field_bot.h  optimized_potential_field_bot.cpp  optimized_potential_field_bot.h  potential_field.cpp  potential_field.h
examples/my_bots/rule_based_bots/: rule_based_bot.cpp  rule_based_bot.h
examples/my_bots/tests/: debug_test_bot.h  remote_draw.h  simulator_test.h  step_size_test_bot.h
examples/my_bots/utilities/: Point2DPolar.cpp  Point2DPolar.h  debug_utility.cpp  debug_utility.h  sc2utility.h  ssh_connection.cpp  ssh_connection.h  ssh_utility.cpp  ssh_utility.h
examples/my_test_data/: facing_data.txt
include/debug_renderer/: debug_renderer.h
include/liu_renderer/: liu_renderer.h
include/sc2api/: sc2_action.h  sc2_common.h  sc2_connection.h  sc2_control_interfaces.h  sc2_coordinator.h  sc2_interfaces.h  sc2_proto_interface.h  sc2_unit.h  test.h
include/sc2lib/: sc2_utils.h
include/sc2renderer/: sc2_renderer.h
include/sc2utils/: port_checker.h  sc2_arg_parser.h  ssh_connection.h
liu_renderer/liu_renderer/: liu_renderer.cpp  liu_renderer.h  liu_renderer.vcxproj  liu_renderer.vcxproj.filters
maps/: EnemyMarineVSMarine.SC2Map  EnemyTower.SC2Map  EnemyTowerVSMarine.SC2Map  EnemyTowerVSMarineSim.SC2Map  EnemyTowerVSThors.SC2Map  EnemyTowerVSThorsSim.SC2Map  Maze.SC2Map  Maze2.SC2Map  Maze2Sim.SC2Map  MazeEnemyTowerVSThors.SC2Map  MazeEnemyTowerVSThorsSim.SC2Map  MazeSim.SC2Map
maps/Test/: testBattle.SC2Map  testBattle1v1.SC2Map  testBattle1v1_thor_thor.SC2Map  testBattle1v1_viking_marine.SC2Map  testBattle1v1_viking_thor.SC2Map  testBattle2.SC2Map  testBattle2v1.SC2Map  testBattle2v2.SC2Map  testBattle3.SC2Map  testBattle4.SC2Map  testBattle5.SC2Map  testBattleAllUnits.SC2Map  testBattle_2distant_vs_1melee.SC2Map  testBattle_d_m_vs_d_m.SC2Map  testBattle_distant_vs_distant.SC2Map  testBattle_distant_vs_melee.SC2Map  testBattle_m_vs_d.SC2Map  testBattle_marines_static.SC2Map  testBattle_no_enemy.SC2Map  testBattle_origin.SC2Map  testBattle_solid.SC2Map  testMechanism_StepSize.SC2Map
maps/Test/DefeatRoaches.SC2Map/: CellAttribute_Vur  ComponentList.SC2Components  DocumentHeader  DocumentInfo  DocumentInfo.version  GameData.version  GameText.version  MapInfo  MapInfo.version  MapScript.galaxy  Minimap.tga  Objects  Objects.version  Preload.xml  Regions  Regions.version  Triggers  Triggers.version  t3SyncHeightMap  t3SyncTextureInfo  t3Terrain.version  t3Terrain.xml  t3TextureMasks
maps/Test/test.SC2Map/: ComponentList.SC2Components  DocumentHeader  DocumentInfo  DocumentInfo.version  GameData.version  GameText.version  Globals.galaxy  MapInfo  MapInfo.version  MapScript.galaxy  Minimap.tga  Objects  Objects.version  Preload.xml  SetupGame.galaxy  Triggers  Triggers.version  t3CellFlags  t3SyncHeightMap  t3SyncTextureInfo  t3Terrain.version  t3Terrain.xml
maps/Test/test2.SC2Map/: DocumentHeader  DocumentInfo.version  GameData.version  GameText.version  MapInfo  MapInfo.version  MapScript.galaxy  Minimap.tga  Objects  Objects.version  Preload.xml  Regions  Regions.version  Triggers.version  ms.galaxy  t3HeightMap  t3SyncHeightMap  t3SyncTextureInfo  t3Terrain.version  t3Terrain.xml  t3VertCol
maps/Test/test3.SC2Map/: DocumentHeader  DocumentInfo.version  GameData.version  GameText.version  Globals.galaxy  MainScript.galaxy  MapInfo  MapInfo.version  MapScript.galaxy  Minimap.tga  Objects  Objects.version  Preload.xml  SetupGame.galaxy  Triggers  Triggers.version  t3SyncCliffLevel  t3SyncTextureInfo  t3Terrain.version  t3Terrain.xml  t3TextureMasks
maps/Test/testBattleC.SC2Map/: ComponentList.SC2Components  DocumentHeader  DocumentInfo  GameText.version  MapInfo  MapScript.galaxy  Minimap.tga  Objects  Objects.version  Preload.xml  Triggers  Triggers.version  t3SyncCliffLevel  t3SyncTextureInfo  t3Terrain.version  (+1 more)
project/: CMakeLists.txt  conver_data.txt  debug_use.cc  debug_use.h  global_defines.h  main.cpp  netstat_record.csv  obj_record.txt  sim_record.txt
project/project/: main.cpp  temp.h
project/rolling_bot/algorithm/: differential_evolution.h  evolutionary_algorithm.h  ga.h  genetic_algorithm.h  population.h  real_ga.cc  real_ga.h  rolling_de.cc  rolling_de.h  rolling_ea.cc  rolling_ea.h  rolling_ga.cc  rolling_ga.cc.backup  rolling_ga.h  rolling_ga.h.backup  rolling_solution.cc  rolling_solution.h  solution.h  terminator.h
project/rolling_bot/methods/: graph_renderer.h  kill_sc2.sh
project/rolling_bot/rolling_bot/: rolling_bot.cc  rolling_bot.h  rolling_bot2.h
project/rolling_bot/simulator/: command.cc  command.h  executor.cc  executor.h  simulator.cc  simulator.h  simulator_pool.cc  simulator_pool.h  state.cc  state.h  statistical_data.h
project/test_bots/test_multi_thread/: test_multi_thread_bot.h
scores/: test_scores.txt  tutorial_test_scores.txt
src/: CMakeLists.txt
src/debug_renderer/: debug_renderer.cc
src/liu_renderer/: liu_renderer.cc
src/sc2api/: sc2_action.cc  sc2_args.cc  sc2_client.cc  sc2_common.cc  sc2_connection.cc  sc2_coordinator.cc  sc2_data.cc  sc2_proto_interface.cc  sc2_unit.cc  test.cc
src/sc2lib/: sc2_utils.cc
src/sc2renderer/: sc2_renderer.cc
src/sc2utils/: port_checker.cc  sc2_manage_process.cc  ssh_connection.cpp
test/: test.vcxproj  test.vcxproj.filters  test_class.h
(+107 files in other folders)
